k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakes-server-dpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snakes-server-pod
  template:
    metadata:
      labels:
        app: snakes-server-pod
    spec:
      containers:
      - name: snakes-server
        image: talustuo/snakes-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: snakes-server-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: snakes-server-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snakes-server-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: snakes-server
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: snakes-server-clusterip-srv
            port:
              number: 80
      - path: /gamehub
        pathType: Prefix
        backend:
          service:
            name: snakes-server-clusterip-srv
            port:
              number: 80
