k8s/snakes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakes-server-dpt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snakes-server-pod
  template:
    metadata:
      labels:
        app: snakes-server-pod
    spec:
      containers:
      - name: server
        image: talustuo/snakes-server:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: snakes-server-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: snakes-server-pod
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snakes-server-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: snakes-server
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: snakes-server-clusterip-srv
            port:
              number: 80
      - path: /gamehub
        pathType: Prefix
        backend:
          service:
            name: snakes-server-clusterip-srv
            servicePort: 
            port:
              name: http
---
# #### Executor ####
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakes-executor-dpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snakes-executor-pod
  template:
    metadata:
      labels:
        app: snakes-executor-pod
    spec:
      containers:
      - name: executor
        image: talustuo/snakes-executor:latest
        imagePullPolicy: Always
---
# #### Client ####
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakes-client-dpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snakes-client-pod
  template:
    metadata:
      labels:
        app: snakes-client-pod
    spec:
      containers:
      - name: snakes-client
        image: talustuo/snakes-client:latest
        imagePullPolicy: Always
        tty: true
        stdin: true
